Leap into the void! Update the minimum Java version from 8 to 21