@@ -82,7 +82,7 @@ public class NavigatorFrame {
     public static HtmlPanel createHtmlPanel(final IBrowserPanel browserPanel, final String uri) {
         URLConnection connection = null;
         try {
-            final URL url = new URL(uri);
+            final URL url = new URI(uri).toURL();
             connection = url.openConnection();
             connection.setRequestProperty("User-Agent", UserAgent.getUserAgent());
             connection.getHeaderField("Set-Cookie");
@@ -138,7 +138,7 @@ public class NavigatorFrame {
             final DocumentBuilderImpl builder = new DocumentBuilderImpl(rendererContext.getUserAgentContext(), rendererContext, config);
             final Document document = builder.parse(is);
             panel.setDocument(document, rendererContext);
-        } catch (final IOException | SAXException ex) {
+        } catch (final Exception ex) {
             throw new RuntimeException(ex);
         }
         return panel;
@@ -196,76 +196,64 @@ public class NavigatorFrame {
             return "Indicates there was an error in the underlying protocol, e.g. TCP/IP.";
         } else if (cause instanceof IOException) {
             final HttpURLConnection httpcon = (HttpURLConnection) connection;
-            switch (httpcon.getResponseCode()) {
-                case 400:
-                    return "The server could not understand the request due to invalid syntax.";
-                case 401:
-                    return "Although the HTTP standard specifies \"unauthorized\", semantically this response means \"unauthenticated\". That is, the client must authenticate itself to get the requested response.";
-                case 402:
-                    return "This response code is reserved for future use. The initial aim for creating this code was using it for digital payment systems, however this status code is used very rarely and no standard convention exists.";
-                case 403:
-                    return "The client does not have access rights to the content; that is, it is unauthorized, so the server is refusing to give the requested resource. Unlike 401 Unauthorized, the client's identity is known to the server.";
-                case 404:
-                    return "The server can not find the requested resource. In the browser, this means the URL is not recognized. In an API, this can also mean that the endpoint is valid but the resource itself does not exist. Servers may also send this response instead of 403 Forbidden to hide the existence of a resource from an unauthorized client. This response code is probably the most well known due to its frequent occurrence on the web.";
-                case 405:
-                    return "The request method is known by the server but is not supported by the target resource. For example, an API may not allow calling DELETE to remove a resource.";
-                case 406:
-                    return "This response is sent when the web server, after performing server-driven content negotiation, doesn't find any content that conforms to the criteria given by the user agent";
-                case 407:
-                    return "This is similar to 401 Unauthorized but authentication is needed to be done by a proxy.";
-                case 408:
-                    return "This response is sent on an idle connection by some servers, even without any previous request by the client. It means that the server would like to shut down this unused connection. This response is used much more since some browsers, like Chrome, Firefox 27+, or IE9, use HTTP pre-connection mechanisms to speed up surfing. Also note that some servers merely shut down the connection without sending this message.";
-                case 409:
-                    return "This response is sent when a request conflicts with the current state of the server.";
-                case 410:
-                    return "This response is sent when the requested content has been permanently deleted from server, with no forwarding address. Clients are expected to remove their caches and links to the resource. The HTTP specification intends this status code to be used for \"limited-time, promotional services\". APIs should not feel compelled to indicate resources that have been deleted with this status code.";
-                case 411:
-                    return "Server rejected the request because the Content-Length header field is not defined and the server requires it.";
-                case 412:
-                    return "The client has indicated preconditions in its headers which the server does not meet.";
-                case 413:
-                    return "Request entity is larger than limits defined by server. The server might close the connection or return an Retry-After header field.";
-                case 414:
-                    return "The URI requested by the client is longer than the server is willing to interpret.";
-                case 415:
-                    return "The media format of the requested data is not supported by the server, so the server is rejecting the request.";
-                case 416:
-                    return "The range specified by the Range header field in the request cannot be fulfilled. It's possible that the range is outside the size of the target URI's data.";
-                case 417:
-                    return "This response code means the expectation indicated by the Expect request header field cannot be met by the server.";
-                case 418:
-                    return "The server refuses the attempt to brew coffee with a teapot.";
-                case 421:
-                    return "The request was directed at a server that is not able to produce a response. This can be sent by a server that is not configured to produce responses for the combination of scheme and authority that are included in the request URI.";
-                case 422:
-                    return "The request was well-formed but was unable to be followed due to semantic errors.";
-                case 426:
-                    return "The server refuses to perform the request using the current protocol but might be willing to do so after the client upgrades to a different protocol. The server sends an Upgrade header in a 426 response to indicate the required protocol(s).";
-                case 428:
-                    return "The origin server requires the request to be conditional. This response is intended to prevent the 'lost update' problem, where a client GETs a resource's state, modifies it and PUTs it back to the server, when meanwhile a third party has modified the state on the server, leading to a conflict.";
-                case 429:
-                    return "The user has sent too many requests in a given amount of time (\"rate limiting\")";
-                case 431:
-                    return "The server is unwilling to process the request because its header fields are too large. The request may be resubmitted after reducing the size of the request header fields.";
-                case 451:
-                    return "The user agent requested a resource that cannot legally be provided, such as a web page censored by a government.";
-                case 500:
-                    return "A generic error message, given when no more specific message is suitable\n";
-                case 501:
-                    return "The server either does not recognize the request method, or it lacks the ability to fulfill the request";
-                case 502:
-                    return "The server was acting as a gateway or proxy and received an invalid response from the upstream server";
-                case 503:
-                    return "The server is currently unavailable (overloaded or down)";
-                case 504:
-                    return "The server was acting as a gateway or proxy and did not receive a timely response from the upstream server";
-                case 505:
-                    return "The server does not support the HTTP protocol version used in the request";
-                default:
-                    return "Indicates an Input/Output error has occurred. This is typically due "
-                            + "to a network connection that cannot be establised or one that has failed, "
-                            + "but it can also mean that a file could not be accessed or found.";
-            }
+            return switch (httpcon.getResponseCode()) {
+                case 400 -> "The server could not understand the request due to invalid syntax.";
+                case 401 ->
+                        "Although the HTTP standard specifies \"unauthorized\", semantically this response means \"unauthenticated\". That is, the client must authenticate itself to get the requested response.";
+                case 402 ->
+                        "This response code is reserved for future use. The initial aim for creating this code was using it for digital payment systems, however this status code is used very rarely and no standard convention exists.";
+                case 403 ->
+                        "The client does not have access rights to the content; that is, it is unauthorized, so the server is refusing to give the requested resource. Unlike 401 Unauthorized, the client's identity is known to the server.";
+                case 404 ->
+                        "The server can not find the requested resource. In the browser, this means the URL is not recognized. In an API, this can also mean that the endpoint is valid but the resource itself does not exist. Servers may also send this response instead of 403 Forbidden to hide the existence of a resource from an unauthorized client. This response code is probably the most well known due to its frequent occurrence on the web.";
+                case 405 ->
+                        "The request method is known by the server but is not supported by the target resource. For example, an API may not allow calling DELETE to remove a resource.";
+                case 406 ->
+                        "This response is sent when the web server, after performing server-driven content negotiation, doesn't find any content that conforms to the criteria given by the user agent";
+                case 407 -> "This is similar to 401 Unauthorized but authentication is needed to be done by a proxy.";
+                case 408 ->
+                        "This response is sent on an idle connection by some servers, even without any previous request by the client. It means that the server would like to shut down this unused connection. This response is used much more since some browsers, like Chrome, Firefox 27+, or IE9, use HTTP pre-connection mechanisms to speed up surfing. Also note that some servers merely shut down the connection without sending this message.";
+                case 409 -> "This response is sent when a request conflicts with the current state of the server.";
+                case 410 ->
+                        "This response is sent when the requested content has been permanently deleted from server, with no forwarding address. Clients are expected to remove their caches and links to the resource. The HTTP specification intends this status code to be used for \"limited-time, promotional services\". APIs should not feel compelled to indicate resources that have been deleted with this status code.";
+                case 411 ->
+                        "Server rejected the request because the Content-Length header field is not defined and the server requires it.";
+                case 412 -> "The client has indicated preconditions in its headers which the server does not meet.";
+                case 413 ->
+                        "Request entity is larger than limits defined by server. The server might close the connection or return an Retry-After header field.";
+                case 414 -> "The URI requested by the client is longer than the server is willing to interpret.";
+                case 415 ->
+                        "The media format of the requested data is not supported by the server, so the server is rejecting the request.";
+                case 416 ->
+                        "The range specified by the Range header field in the request cannot be fulfilled. It's possible that the range is outside the size of the target URI's data.";
+                case 417 ->
+                        "This response code means the expectation indicated by the Expect request header field cannot be met by the server.";
+                case 418 -> "The server refuses the attempt to brew coffee with a teapot.";
+                case 421 ->
+                        "The request was directed at a server that is not able to produce a response. This can be sent by a server that is not configured to produce responses for the combination of scheme and authority that are included in the request URI.";
+                case 422 -> "The request was well-formed but was unable to be followed due to semantic errors.";
+                case 426 ->
+                        "The server refuses to perform the request using the current protocol but might be willing to do so after the client upgrades to a different protocol. The server sends an Upgrade header in a 426 response to indicate the required protocol(s).";
+                case 428 ->
+                        "The origin server requires the request to be conditional. This response is intended to prevent the 'lost update' problem, where a client GETs a resource's state, modifies it and PUTs it back to the server, when meanwhile a third party has modified the state on the server, leading to a conflict.";
+                case 429 -> "The user has sent too many requests in a given amount of time (\"rate limiting\")";
+                case 431 ->
+                        "The server is unwilling to process the request because its header fields are too large. The request may be resubmitted after reducing the size of the request header fields.";
+                case 451 ->
+                        "The user agent requested a resource that cannot legally be provided, such as a web page censored by a government.";
+                case 500 -> "A generic error message, given when no more specific message is suitable\n";
+                case 501 ->
+                        "The server either does not recognize the request method, or it lacks the ability to fulfill the request";
+                case 502 ->
+                        "The server was acting as a gateway or proxy and received an invalid response from the upstream server";
+                case 503 -> "The server is currently unavailable (overloaded or down)";
+                case 504 ->
+                        "The server was acting as a gateway or proxy and did not receive a timely response from the upstream server";
+                case 505 -> "The server does not support the HTTP protocol version used in the request";
+                default -> "Indicates an Input/Output error has occurred. This is typically due "
+                        + "to a network connection that cannot be establised or one that has failed, "
+                        + "but it can also mean that a file could not be accessed or found.";
+            };
 
 
         } else if ((cause instanceof NullPointerException) || (cause instanceof ClassCastException)) {
